executable(
    meson.project_name(),
    'Access/Choice.vala',
    'Access/Dialog.vala',
    'Access/Portal.vala',
    'AppChooser/AppButton.vala',
    'AppChooser/Dialog.vala',
    'AppChooser/Portal.vala',
    'Background/NotificationRequest.vala',
    'Background/Portal.vala',
    'Notification/ActionGroup.vala',
    'Notification/DBus.vala',
    'Notification/Notification.vala',
    'Notification/Portal.vala',
    'Notification/Widget.vala',
    'Notification/Window.vala',
    'ScreenCast/MonitorTracker/Interface.vala',
    'ScreenCast/MonitorTracker/Monitor.vala',
    'ScreenCast/MonitorTracker/MonitorTracker.vala',
    'ScreenCast/Dialog.vala',
    'ScreenCast/Portal.vala',
    'ScreenCast/SelectionRow.vala',
    'ScreenCast/Session.vala',
    'Screenshot/Portal.vala',
    'Screenshot/SetupDialog.vala',
    'Wallpaper/Portal.vala',
    configure_file(input: 'Config.vala.in', output: '@BASENAME@', configuration: conf_data),
    'DesktopIntegration.vala',
    'ExternalWindow.vala',
    'XdgDesktopPortalPantheon.vala',
    icon_res,
    dependencies: [
        glib_dep,
        gobject_dep,
        gio_dep,
        granite_dep,
        gtk_deps,
        pantheon_wayland_dep,
        x11_dep
    ],
    install: true,
    install_dir: libexecdir
)
